case-studies/01-url-shortner/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-api
  namespace: url
spec:
  selector:
    app: url-api            # routes to all pods with this label
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP           # internal only — Ingress handles external

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-ingress
  namespace: url
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - s.yourdomain.com
    secretName: url-tls-cert   # cert-manager writes the cert here
  rules:
  - host: s.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-api
            port:
              number: 80
